// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paragraph snapshots Paragraph: 0 1`] = `
<p
  className="typography-0-1-1 typography__7-0-1-8 paragraph-0-1-11 paragraph-0-1-11 paragraph__3-0-1-14"
>
  Paragraph test string
</p>
`;

exports[`paragraph snapshots Paragraph: 1 1`] = `
<p
  className="typography-0-1-1 typography__5-0-1-6 paragraph-0-1-11 paragraph-0-1-11 paragraph__1-0-1-12"
  data-sketch-symbol="Paragraph 1"
>
  Paragraph test string
</p>
`;

exports[`paragraph snapshots Paragraph: 2 1`] = `
<p
  className="typography-0-1-1 typography__6-0-1-7 paragraph-0-1-11 paragraph-0-1-11 paragraph__2-0-1-13"
  data-sketch-symbol="Paragraph 2"
>
  Paragraph test string
</p>
`;

exports[`paragraph snapshots Paragraph: 3 1`] = `
<p
  className="typography-0-1-1 typography__7-0-1-8 paragraph-0-1-11 paragraph-0-1-11 paragraph__3-0-1-14"
  data-sketch-symbol="Paragraph 3"
>
  Paragraph test string
</p>
`;
